packages/build/tests/error/build/fixtures/cancel/plugin.js
module.exports = {
  name: 'netlify-plugin-test',
  async onInit({
    utils: {
      build: { cancel },
    },
  }) {
    cancel('test')
  },
}
